Sync latest notebook from Google colab

--- a/notebook/Scripture.ipynb
+++ b/notebook/Scripture.ipynb
@@ -12,23 +12,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Kah-ZBQoCzQR",
-        "outputId": "ad85ef3e-3eee-4072-ffb8-eb36beb18888"
+        "outputId": "c4b3f70e-0a49-4534-fe23-8e67cf3f7381"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Collecting PyMuPDF\n",
             "  Downloading pymupdf-1.26.1-cp39-abi3-manylinux_2_28_x86_64.whl.metadata (3.4 kB)\n",
             "Downloading pymupdf-1.26.1-cp39-abi3-manylinux_2_28_x86_64.whl (24.1 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.1/24.1 MB\u001b[0m \u001b[31m21.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/24.1 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.3/24.1 MB\u001b[0m \u001b[31m160.8 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.1/24.1 MB\u001b[0m \u001b[31m189.4 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━\u001b[0m \u001b[32m18.7/24.1 MB\u001b[0m \u001b[31m192.6 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m24.1/24.1 MB\u001b[0m \u001b[31m209.0 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m24.1/24.1 MB\u001b[0m \u001b[31m209.0 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.1/24.1 MB\u001b[0m \u001b[31m88.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: PyMuPDF\n",
             "Successfully installed PyMuPDF-1.26.1\n"
           ]
@@ -40,13 +40,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hJQ3HqTTThwK",
-        "outputId": "b8a8d8e7-19d3-4a41-db92-ee27772f0dbf"
+        "outputId": "e251be6d-7f42-4425-9251-aa26fda6b838"
       },
       "outputs": [
         {
@@ -54,7 +54,7 @@
           "name": "stdout",
           "text": [
             "Collecting pymongo\n",
-            "  Downloading pymongo-4.13.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (22 kB)\n",
+            "  Downloading pymongo-4.13.2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (22 kB)\n",
             "Requirement already satisfied: google-generativeai in /usr/local/lib/python3.11/dist-packages (0.8.5)\n",
             "Collecting python-dotenv\n",
             "  Downloading python_dotenv-1.1.0-py3-none-any.whl.metadata (24 kB)\n",
@@ -63,7 +63,7 @@
             "  Downloading dnspython-2.7.0-py3-none-any.whl.metadata (5.8 kB)\n",
             "Requirement already satisfied: google-ai-generativelanguage==0.6.15 in /usr/local/lib/python3.11/dist-packages (from google-generativeai) (0.6.15)\n",
             "Requirement already satisfied: google-api-core in /usr/local/lib/python3.11/dist-packages (from google-generativeai) (2.25.0)\n",
-            "Requirement already satisfied: google-api-python-client in /usr/local/lib/python3.11/dist-packages (from google-generativeai) (2.171.0)\n",
+            "Requirement already satisfied: google-api-python-client in /usr/local/lib/python3.11/dist-packages (from google-generativeai) (2.172.0)\n",
             "Requirement already satisfied: google-auth>=2.15.0 in /usr/local/lib/python3.11/dist-packages (from google-generativeai) (2.38.0)\n",
             "Requirement already satisfied: protobuf in /usr/local/lib/python3.11/dist-packages (from google-generativeai) (5.29.5)\n",
             "Requirement already satisfied: pydantic in /usr/local/lib/python3.11/dist-packages (from google-generativeai) (2.11.5)\n",
@@ -80,7 +80,7 @@
             "Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/lib/python3.11/dist-packages (from pydantic->google-generativeai) (0.7.0)\n",
             "Requirement already satisfied: pydantic-core==2.33.2 in /usr/local/lib/python3.11/dist-packages (from pydantic->google-generativeai) (2.33.2)\n",
             "Requirement already satisfied: typing-inspection>=0.4.0 in /usr/local/lib/python3.11/dist-packages (from pydantic->google-generativeai) (0.4.1)\n",
-            "Requirement already satisfied: grpcio<2.0.0,>=1.33.2 in /usr/local/lib/python3.11/dist-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.15->google-generativeai) (1.72.1)\n",
+            "Requirement already satisfied: grpcio<2.0.0,>=1.33.2 in /usr/local/lib/python3.11/dist-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.15->google-generativeai) (1.73.0)\n",
             "Requirement already satisfied: grpcio-status<2.0.0,>=1.33.2 in /usr/local/lib/python3.11/dist-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.15->google-generativeai) (1.71.0)\n",
             "Requirement already satisfied: pyparsing!=3.0.0,!=3.0.1,!=3.0.2,!=3.0.3,<4,>=2.4.2 in /usr/local/lib/python3.11/dist-packages (from httplib2<1.0.0,>=0.19.0->google-api-python-client->google-generativeai) (3.2.3)\n",
             "Requirement already satisfied: pyasn1<0.7.0,>=0.6.1 in /usr/local/lib/python3.11/dist-packages (from pyasn1-modules>=0.2.1->google-auth>=2.15.0->google-generativeai) (0.6.1)\n",
@@ -88,13 +88,13 @@
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests<3.0.0,>=2.18.0->google-api-core->google-generativeai) (3.10)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests<3.0.0,>=2.18.0->google-api-core->google-generativeai) (2.4.0)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests<3.0.0,>=2.18.0->google-api-core->google-generativeai) (2025.4.26)\n",
-            "Downloading pymongo-4.13.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.4 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.4/1.4 MB\u001b[0m \u001b[31m19.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "Downloading pymongo-4.13.2-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.4 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.4/1.4 MB\u001b[0m \u001b[31m58.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading python_dotenv-1.1.0-py3-none-any.whl (20 kB)\n",
             "Downloading dnspython-2.7.0-py3-none-any.whl (313 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m313.6/313.6 kB\u001b[0m \u001b[31m22.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m313.6/313.6 kB\u001b[0m \u001b[31m24.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: python-dotenv, dnspython, pymongo\n",
-            "Successfully installed dnspython-2.7.0 pymongo-4.13.1 python-dotenv-1.1.0\n"
+            "Successfully installed dnspython-2.7.0 pymongo-4.13.2 python-dotenv-1.1.0\n"
           ]
         }
       ],
@@ -189,7 +189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -412,49 +412,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SzqUdlnGEaw4",
-        "outputId": "6159d23c-0846-4f51-aaa3-441156418770"
+        "id": "SzqUdlnGEaw4"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Opening and processing 'unlockingthebible.pdf'...\n",
-            "Targeting pages from 21 to 1318.\n",
-            "Skipping page 35 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 142 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 164 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 214 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 276 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 318 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 419 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 420 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 453 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 465 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 479 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 576 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 614 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 654 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 670 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 704 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 902 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 920 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 1016 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 1139 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 1184 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 1222 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Skipping page 1263 due to insufficient content (less than 4 sentences' worth of text).\n",
-            "Writing data for 1254 pages to 'unlockingthebible_chunks.json'...\n",
-            "Processing complete.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import fitz  # PyMuPDF\n",
         "import json\n",
@@ -564,9 +526,8 @@
         "\n",
         "# --- Main execution ---\n",
         "if __name__ == \"__main__\":\n",
-        "    # Define the name of your PDF and the desired output JSON file\n",
-        "    pdf_file = \"unlockingthebible.pdf\"\n",
-        "    json_file = \"unlockingthebible_chunks.json\"\n",
+        "    pdf_file = \"mycommentary.pdf\"\n",
+        "    json_file = \"commentary_chunks.json\"\n",
         "\n",
         "    # Define the page range you want to process\n",
         "    START_PAGE_TO_PROCESS = 21\n",
@@ -588,46 +549,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 228
-        },
-        "id": "i2NXlc5OPB7B",
-        "outputId": "88761682-82ae-47a7-ee75-5a672f869e8a"
+        "id": "i2NXlc5OPB7B"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Connecting to MongoDB...\n",
-            "MongoDB connection successful.\n",
-            "Clearing existing documents in 'commentary_chunks' collection...\n",
-            "Loading data from unlockingthebible_chunks.json...\n",
-            "Successfully loaded 1254 chunks.\n",
-            "Starting to process and embed chunks...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Processing Chunks: 100%|██████████| 1254/1254 [38:25<00:00,  1.84s/it]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "Inserting 1254 documents into MongoDB...\n",
-            "All documents have been successfully inserted.\n",
-            "MongoDB connection closed.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "\n",
         "import os\n",
@@ -646,7 +572,7 @@
         "EMBEDDING_MODEL = \"models/text-embedding-004\" # The model for generating embeddings\n",
         "\n",
         "# Input JSON file\n",
-        "INPUT_JSON_FILE = \"unlockingthebible_chunks.json\"\n",
+        "INPUT_JSON_FILE = \"commentary_chunks.json\"\n",
         "\n",
         "# --- Main Script ---\n",
         "\n",
@@ -772,112 +698,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "e8T53srst960",
-        "outputId": "bc8fcbd3-7819-4f3f-aa62-17692e0baf61"
+        "id": "e8T53srst960"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Connecting to MongoDB...\n",
-            "MongoDB connection successful.\n",
-            "Updated: God Is Powerful → Genesis\n",
-            "Updated: Idolatry → Deuteronomy\n",
-            "Updated: Idolatry → Deuteronomy\n",
-            "Updated: Idolatry → Deuteronomy\n",
-            "Updated: Idolatry → Deuteronomy\n",
-            "Updated: Idolatry → Deuteronomy\n",
-            "Updated: Idolatry → Deuteronomy\n",
-            "Updated: Idolatry → Deuteronomy\n",
-            "Updated: Idolatry → Deuteronomy\n",
-            "Updated: Idolatry → Deuteronomy\n",
-            "Updated: Idolatry → Deuteronomy\n",
-            "Updated: Idolatry → Deuteronomy\n",
-            "Updated: Idolatry → Deuteronomy\n",
-            "Updated: Idolatry → Deuteronomy\n",
-            "Updated: Idolatry → Deuteronomy\n",
-            "Updated: Idolatry → Deuteronomy\n",
-            "Updated: Idolatry → Deuteronomy\n",
-            "Updated: Idolatry → Deuteronomy\n",
-            "Updated: Idolatry → Deuteronomy\n",
-            "Updated: Old Testament Use → Matthew\n",
-            "Updated: Old Testament Use → Matthew\n",
-            "Updated: Old Testament Use → Matthew\n",
-            "Updated: Old Testament Use → Matthew\n",
-            "Updated: Old Testament Use → Matthew\n",
-            "Updated: Old Testament Use → Matthew\n",
-            "Updated: Old Testament Use → Matthew\n",
-            "Updated: Old Testament Use → Matthew\n",
-            "Updated: Old Testament Use → Matthew\n",
-            "Updated: Old Testament Use → Matthew\n",
-            "Updated: Old Testament Use → Matthew\n",
-            "Updated: Old Testament Use → Matthew\n",
-            "Updated: Old Testament Use → Matthew\n",
-            "Updated: Old Testament Use → Matthew\n",
-            "Updated: Old Testament Use → Matthew\n",
-            "Updated: Old Testament Use → Matthew\n",
-            "Updated: Paul → Acts\n",
-            "Updated: Paul → Acts\n",
-            "Updated: Paul → Acts\n",
-            "Updated: Paul → Acts\n",
-            "Updated: Paul → Acts\n",
-            "Updated: Paul → Acts\n",
-            "Updated: Paul → Acts\n",
-            "Updated: Paul → Acts\n",
-            "Updated: Paul → Acts\n",
-            "Updated: Paul → Acts\n",
-            "Updated: Paul → Acts\n",
-            "Updated: Paul → Acts\n",
-            "Updated: Paul → Acts\n",
-            "Updated: Paul → Acts\n",
-            "Updated: Paul → Acts\n",
-            "Updated: His Age → 1, 2, And 3 John\n",
-            "Updated: His Age → 1, 2, And 3 John\n",
-            "Updated: His Age → 1, 2, And 3 John\n",
-            "Updated: His Age → 1, 2, And 3 John\n",
-            "Updated: His Age → 1, 2, And 3 John\n",
-            "Updated: His Age → 1, 2, And 3 John\n",
-            "Updated: His Age → 1, 2, And 3 John\n",
-            "Updated: His Age → 1, 2, And 3 John\n",
-            "Updated: His Age → 1, 2, And 3 John\n",
-            "Updated: The Possibilities → 1, 2, And 3 John\n",
-            "Updated: The Possibilities → 1, 2, And 3 John\n",
-            "Updated: The Possibilities → 1, 2, And 3 John\n",
-            "Updated: The Possibilities → 1, 2, And 3 John\n",
-            "Updated: The Possibilities → 1, 2, And 3 John\n",
-            "Updated: The Possibilities → 1, 2, And 3 John\n",
-            "Updated: The Possibilities → 1, 2, And 3 John\n",
-            "Updated: The Possibilities → 1, 2, And 3 John\n",
-            "Updated: The Possibilities → 1, 2, And 3 John\n",
-            "Updated: The Possibilities → 1, 2, And 3 John\n",
-            "Updated: The Possibilities → 1, 2, And 3 John\n",
-            "Updated: The Possibilities → 1, 2, And 3 John\n",
-            "Updated: The Possibilities → 1, 2, And 3 John\n",
-            "Updated: The Possibilities → 1, 2, And 3 John\n",
-            "Updated: The Possibilities → 1, 2, And 3 John\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
+        "\n",
         "\n",
         "from pymongo import MongoClient\n",
         "import re\n",
         "\n",
         "# Custom title overrides\n",
         "custom_titles = {\n",
-        "    \"God Is Powerful\": \"Genesis\",\n",
-        "    \"Idolatry\": \"Deuteronomy\",\n",
-        "    \"Old Testament Use\": \"Matthew\",\n",
-        "    \"Paul\": \"Acts\",\n",
-        "    \"His Age\": \"1, 2, And 3 John\",\n",
-        "    \"The Possibilities\": \"1, 2, And 3 John\"\n",
-        "}\n",
+        "    }\n",
         "\n",
         "mongo_client, collection = connect_to_mongodb()\n",
         "# Fetch all documents with a chapter_title\n",
@@ -10385,7 +10219,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNgTezgAoAkGKdV+/Ol6j2E",
+      "authorship_tag": "ABX9TyM30OlxaJM3ixckX1uv+UR9",
       "include_colab_link": true
     },
     "kernelspec": {
